# ieee_search

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
example/: README.md  example.py  ieee_vis.py  search.py
ieee_search/core/: xploreapi.py
ieee_search/paper/: paper.py
output/: ieee_vis_papers_2023_2024.json
